--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,8 +24,8 @@
         <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
-        <data android:scheme="myapp"/>
-        <data android:scheme="com.devpintar.rnexpoboilerplate"/>
+        <data android:scheme="rn-expo-boilerplate"/>
+        <data android:scheme="com.example.rnexpoboilerplate"/>
         <data android:scheme="exp+rn-expo-boilerplate"/>
       </intent-filter>
     </activity>
