feat(ui): add new UI components and update existing ones
- Add new components: Alert, AlertDialog, Avatar, Checkbox, Collapsible, Dialog, EmptyState, ErrorBanner, ErrorState, Icon, NativeOnlyAnimatedView, RadioGroup, Select, Skeleton, Switch, Tabs, Textarea, Toggle, ToggleGroup
- Update existing components: Button, Text with new variants and improvements
- Add new icons and update icon structure documentation
- Add new UI components to barrel exports
- Update package.json with new dependencies
- Implement new components in various screens
- Improve error handling with new error state components

--- a/package.json
+++ b/package.json
@@ -15,9 +15,20 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@rn-primitives/alert-dialog": "^1.2.0",
+    "@rn-primitives/avatar": "^1.2.0",
+    "@rn-primitives/checkbox": "^1.2.0",
+    "@rn-primitives/collapsible": "^1.2.0",
+    "@rn-primitives/dialog": "^1.2.0",
     "@rn-primitives/label": "^1.1.0",
     "@rn-primitives/portal": "^1.3.0",
-    "@rn-primitives/slot": "^1.1.0",
+    "@rn-primitives/radio-group": "^1.2.0",
+    "@rn-primitives/select": "^1.2.0",
+    "@rn-primitives/slot": "^1.2.0",
+    "@rn-primitives/switch": "^1.2.0",
+    "@rn-primitives/tabs": "^1.2.0",
+    "@rn-primitives/toggle": "^1.2.0",
+    "@rn-primitives/toggle-group": "^1.2.0",
     "@rn-primitives/types": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
